added form, service, change styles

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,5 +1,2 @@
-<p>
-  user-list works!
-</p>
-
 <app-user-item *ngFor="let item of items" [item]="item" (outItem)="outToHeader($event)"></app-user-item>
+<app-form-item></app-form-item>
