--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div class="container">
-  <app-header [item]="item"></app-header>
-  <app-user-list (outItem)="getItem($event)"></app-user-list>
-</div>
+<h2>Hello</h2>
