--- a/src/app/news-list/news-item/news-item.component.html
+++ b/src/app/news-list/news-item/news-item.component.html
@@ -1,4 +1,4 @@
-<div class="title">
+<div class="title" (click)="openDetailPage(newsItem.id)">
   {{newsItem.title}}
   <span>({{newsItem.domain}})</span>
 </div>
