--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,1 +1,4 @@
 <app-news-item *ngFor="let item of news" [newsItem]="item"></app-news-item>
+
+<button *ngIf="params.page > 1" type="button" (click)="prevPage()">Prev</button>
+<button type="button" (click)="nextPage()">Next</button>
