--- a/src/shared/footer/footer.component.html
+++ b/src/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <p>Bekzhan Seitkali (<a target="_blank" href="http://github.com/sbeka">SBeka</a>) 2019</p>
+</footer>
