--- a/src/shared/header/header.component.html
+++ b/src/shared/header/header.component.html
@@ -1,9 +1,15 @@
-<img class="logo" src="https://angular2-hn.firebaseapp.com/assets/images/logo.svg" alt="">
+<div class="flex-container">
+  <div class="logo-box">
+    <img class="logo" src="https://angular2-hn.firebaseapp.com/assets/images/logo.svg" alt="">
+  </div>
 
-<ul>
-  <li routerLink="/">new</li>
-  <li routerLink="/show">show</li>
-  <li routerLink="/ask">ask</li>
-  <li routerLink="/jobs">jobs</li>
-</ul>
-<div class="clear"></div>
+  <div class="list-box">
+    <ul>
+      <li routerLink="/">new</li>
+      <li routerLink="/show">show</li>
+      <li routerLink="/ask">ask</li>
+      <li routerLink="/jobs">jobs</li>
+    </ul>
+    <div class="clear"></div>
+  </div>
+</div>
