--- a/src/app/news-list/news-list.component.css
+++ b/src/app/news-list/news-list.component.css
@@ -4,3 +4,15 @@ app-news-item {
   padding: 20px 10px;
   background: #f5f5f5;
 }
+
+.pagination {
+  padding: 10px;
+}
+
+.pagination .pag-btn {
+  padding: 7px 14px;
+  background: #b92b27;
+  border: none;
+  color: #ffffff;
+  margin-right: 10px;
+}
